add section padding

--- a/style.css
+++ b/style.css
@@ -23,3 +23,7 @@ button[type="submit"] {
 button[type="submit"]:hover {
   background-color: #0056b3;
 }
+/* Section padding */
+section {
+  padding: 5px;
+}
